Fixed Firefox support. SVG Baseline shift not supported in FF.

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -5,6 +5,23 @@ p {
 .link {
   stroke: #000;
   stroke-width: 3px;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 0;
+  animation-name: fadein, dash;
+  animation-duration: 1s, 2s;
+  animation-timing-function: ease, linear;
+  animation-delay: 0s, 0s;
+  animation-iteration-count: 1, 1;
+  animation-fill-mode: forwards, forwards;
+}
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: 1000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 .node {
